# tower-resilience

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ERROR_HANDLING_OPTIONS.md  LICENSE-APACHE  LICENSE-MIT  README.md  release-plz.toml
.github/: dependabot.yml
benches/: comprehensive_benchmarks.rs  happy_path_overhead.rs
crates/tower-cache/: Cargo.toml
crates/tower-cache/examples/: simple.rs
crates/tower-cache/src/: events.rs  layer.rs  lib.rs  store.rs
crates/tower-cache/tests/: cache_concurrency.rs
crates/tower-resilience/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-adaptive/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-adaptive/src/: algorithm.rs  layer.rs  lib.rs  service.rs
crates/tower-resilience-adaptive/tests/: contract.rs
crates/tower-resilience-bulkhead/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-bulkhead/examples/: bulkhead_advanced.rs  bulkhead_basic.rs  bulkhead_demo.rs  simple_bulkhead.rs
crates/tower-resilience-bulkhead/src/: config.rs  error.rs  handle.rs  layer.rs  lib.rs  service.rs
crates/tower-resilience-bulkhead/tests/: contract.rs
crates/tower-resilience-cache/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-cache/examples/: cache_example.rs
crates/tower-resilience-cache/src/: config.rs  error.rs  eviction.rs  layer.rs  lib.rs  shared_layer.rs  store.rs
crates/tower-resilience-cache/tests/: contract.rs
crates/tower-resilience-chaos/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-chaos/examples/: chaos_example.rs
crates/tower-resilience-chaos/src/: config.rs  events.rs  layer.rs  lib.rs  service.rs
crates/tower-resilience-chaos/tests/: contract.rs
crates/tower-resilience-circuitbreaker/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-circuitbreaker/examples/: circuitbreaker_example.rs  circuitbreaker_fallback.rs  circuitbreaker_health_check.rs
crates/tower-resilience-circuitbreaker/src/: circuit.rs  classifier.rs  config.rs  error.rs  handle.rs  health_integration.rs  layer.rs  lib.rs
crates/tower-resilience-circuitbreaker/tests/: contract.rs
crates/tower-resilience-coalesce/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-coalesce/src/: config.rs  layer.rs  lib.rs  service.rs
crates/tower-resilience-coalesce/tests/: contract.rs
crates/tower-resilience-core/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-core/src/: aimd.rs  classifier.rs  error.rs  error_layer.rs  events.rs  health_integration.rs  lib.rs  testing.rs
crates/tower-resilience-core/tests/: core_events.rs  core_fn_listener.rs  core_lifecycle.rs  core_panics.rs
crates/tower-resilience-executor/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-executor/src/: executor.rs  layer.rs  lib.rs  service.rs
crates/tower-resilience-executor/tests/: contract.rs
crates/tower-resilience-fallback/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-fallback/examples/: fallback_example.rs
crates/tower-resilience-fallback/src/: config.rs  error.rs  events.rs  layer.rs  lib.rs
crates/tower-resilience-fallback/tests/: contract.rs
crates/tower-resilience-healthcheck/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-healthcheck/examples/: basic.rs  healthcheck_basic.rs
crates/tower-resilience-healthcheck/src/: checker.rs  config.rs  context.rs  lib.rs  selector.rs  triggers.rs  wrapper.rs
crates/tower-resilience-healthcheck/tests/: http_integration.rs
crates/tower-resilience-hedge/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-hedge/src/: config.rs  error.rs  events.rs  layer.rs  lib.rs
crates/tower-resilience-hedge/tests/: contract.rs
crates/tower-resilience-outlier/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-outlier/src/: config.rs  detector.rs  error.rs  events.rs  layer.rs  lib.rs  service.rs  strategy.rs
crates/tower-resilience-outlier/tests/: contract.rs
crates/tower-resilience-ratelimiter/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-ratelimiter/examples/: ratelimiter_example.rs
crates/tower-resilience-ratelimiter/src/: config.rs  error.rs  handle.rs  layer.rs  lib.rs  limiter.rs
crates/tower-resilience-ratelimiter/tests/: contract.rs
crates/tower-resilience-reconnect/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-reconnect/examples/: basic.rs  custom_policy.rs  reconnect_basic.rs  reconnect_custom_policy.rs
crates/tower-resilience-reconnect/src/: config.rs  layer.rs  lib.rs  policy.rs  service.rs  state.rs
crates/tower-resilience-reconnect/tests/: contract.rs
crates/tower-resilience-retry/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-retry/examples/: retry_example.rs
crates/tower-resilience-retry/src/: budget.rs  config.rs  events.rs  layer.rs  lib.rs  policy.rs
crates/tower-resilience-retry/tests/: contract.rs
crates/tower-resilience-router/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-router/src/: config.rs  error.rs  events.rs  lib.rs  selection.rs
crates/tower-resilience-router/tests/: contract.rs
crates/tower-resilience-timelimiter/: CHANGELOG.md  Cargo.toml
crates/tower-resilience-timelimiter/examples/: timelimiter_example.rs
crates/tower-resilience-timelimiter/src/: config.rs  error.rs  layer.rs  lib.rs
crates/tower-resilience-timelimiter/tests/: contract.rs
crates/tower-resilience/examples/: combined.rs  full_stack.rs
crates/tower-resilience/src/: composition.rs  lib.rs  observability.rs  patterns.rs  tower_primer.rs  use_cases.rs
examples/: adaptive.rs  bulkhead.rs  cache.rs  chaos.rs  circuitbreaker.rs  coalesce.rs  composition_outbound.rs  database_client.rs  error_handling_comparison.rs  executor.rs  fallback.rs  healthcheck.rs  healthcheck_circuitbreaker.rs  hedge.rs  message_queue_worker.rs  observability_metrics.rs  outlier.rs  ratelimiter.rs  reconnect.rs  resilience_error_demo.rs  (+4 more)
examples/axum-resilient-kv-store/: Cargo.toml  README.md
examples/axum-resilient-kv-store/src/: main.rs
examples/tonic-resilient-greeter/: Cargo 2.toml  Cargo.toml  README 2.md
examples/tonic-resilient-greeter/proto/: greeter.proto
examples/tonic-resilient-greeter/src/: client.rs  server.rs
(+192 files in other folders)
