[package]
name = "tower-resilience-tests"
version = "0.1.0"
edition = "2024"
publish = false

[features]
metrics = []

[dependencies]
tower-resilience-core = { version = "0.4.2", path = "crates/tower-resilience-core" }
tower-resilience-circuitbreaker = { path = "crates/tower-resilience-circuitbreaker", features = ["metrics", "tracing"] }
tower-resilience-bulkhead = { path = "crates/tower-resilience-bulkhead", features = ["metrics"] }
tower-resilience-cache = { path = "crates/tower-resilience-cache", features = ["metrics"] }
tower-resilience-retry = { path = "crates/tower-resilience-retry", features = ["metrics"] }
tower-resilience-timelimiter = { path = "crates/tower-resilience-timelimiter", features = ["metrics"] }
tower-resilience-ratelimiter = { path = "crates/tower-resilience-ratelimiter", features = ["metrics"] }
tower-resilience-chaos = { path = "crates/tower-resilience-chaos" }
tower = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
futures = { workspace = true }

[dev-dependencies]
metrics = { workspace = true }
metrics-util = { version = "0.20", default-features = false, features = ["debugging"] }
criterion = { workspace = true }

[[bench]]
name = "happy_path_overhead"
harness = false

[workspace]
resolver = "2"
members = [
    "crates/tower-resilience-core",
    "crates/tower-resilience-circuitbreaker",
    "crates/tower-resilience-bulkhead",
    "crates/tower-resilience-retry",
    "crates/tower-resilience-timelimiter",
    "crates/tower-resilience-cache",
    "crates/tower-resilience-ratelimiter",
    "crates/tower-resilience-chaos",
    "crates/tower-resilience",
]

[workspace.package]
version = "0.4.2"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/tower-resilience"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
rust-version = "1.64.0"

[workspace.dependencies]
tower = { version = "0.5", features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
tokio = { version = "1", features = ["time", "sync"] }
futures = "0.3"
thiserror = "2.0"
tracing = "0.1"
metrics = "0.24"
criterion = { version = "0.5", features = ["async_tokio"] }

tower-resilience-core = { version = "0.4.2", path = "crates/tower-resilience-core" }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
