[package]
name = "tower-resilience-tests"
version = "0.1.0"
edition = "2024"
publish = false

[features]
metrics = []

[dependencies]
tower-resilience-core = { version = "0.7.0", path = "crates/tower-resilience-core" }
tower-resilience-circuitbreaker = { path = "crates/tower-resilience-circuitbreaker", features = ["metrics", "tracing"] }
tower-resilience-bulkhead = { path = "crates/tower-resilience-bulkhead", features = ["metrics"] }
tower-resilience-cache = { path = "crates/tower-resilience-cache", features = ["metrics"] }
tower-resilience-retry = { path = "crates/tower-resilience-retry", features = ["metrics"] }
tower-resilience-timelimiter = { path = "crates/tower-resilience-timelimiter", features = ["metrics"] }
tower-resilience-ratelimiter = { path = "crates/tower-resilience-ratelimiter", features = ["metrics"] }
tower-resilience-chaos = { path = "crates/tower-resilience-chaos", features = ["metrics"] }
tower-resilience-reconnect = { path = "crates/tower-resilience-reconnect", features = ["metrics"] }
tower-resilience-healthcheck = { path = "crates/tower-resilience-healthcheck" }
tower-resilience-fallback = { path = "crates/tower-resilience-fallback", features = ["metrics"] }
tower-resilience-hedge = { path = "crates/tower-resilience-hedge", features = ["metrics"] }
tower-resilience-adaptive = { path = "crates/tower-resilience-adaptive" }
tower-resilience-coalesce = { path = "crates/tower-resilience-coalesce" }
tower-resilience-executor = { path = "crates/tower-resilience-executor" }
tower = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3"
futures = { workspace = true }

[dev-dependencies]
metrics = { workspace = true }
metrics-util = { version = "0.20", default-features = false, features = ["debugging"] }
criterion = { workspace = true }
serial_test = "3.2"
rand = "0.9"
proptest = { workspace = true }

[[bench]]
name = "happy_path_overhead"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[[example]]
name = "healthcheck_circuitbreaker"
required-features = []

[workspace]
resolver = "2"
members = [
    "crates/tower-resilience-core",
    "crates/tower-resilience-circuitbreaker",
    "crates/tower-resilience-bulkhead",
    "crates/tower-resilience-retry",
    "crates/tower-resilience-timelimiter",
    "crates/tower-resilience-cache",
    "crates/tower-resilience-ratelimiter",
    "crates/tower-resilience-chaos",
    "crates/tower-resilience-reconnect",
    "crates/tower-resilience-healthcheck",
    "crates/tower-resilience-fallback",
    "crates/tower-resilience-hedge",
    "crates/tower-resilience-executor",
    "crates/tower-resilience-adaptive",
    "crates/tower-resilience-coalesce",
    "crates/tower-resilience",
    "examples/axum-resilient-kv-store",
    "examples/tonic-resilient-greeter",
]

[workspace.package]
version = "0.7.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/tower-resilience"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
rust-version = "1.64.0"

[workspace.dependencies]
tower = { version = "0.5", features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
tokio = { version = "1.48.0", features = ["time", "sync"] }
futures = "0.3"
thiserror = "2.0"
tracing = "0.1"
metrics = "0.24"
criterion = { version = "0.8", features = ["async_tokio"] }
serde = { version = "1.0", features = ["derive"] }
pin-project-lite = "0.2"
proptest = "1.6"

tower-resilience-core = { version = "0.7.0", path = "crates/tower-resilience-core" }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
