[package]
name = "tower-cache"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Josh Rotenberg <josh@rotenberg.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/tower-resilience"
description = "Response caching/memoization for Tower services"
keywords = ["tower", "cache", "memoization", "resilience"]
categories = ["asynchronous", "network-programming", "caching"]

[dependencies]
tower-resilience-core = { path = "../tower-resilience-core", version = "0.2.0" }
tower = "0.5"
futures = "0.3"
tokio = { version = "1", features = ["sync", "time"] }
lru = "0.16"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }

[features]
default = []
metrics = ["tower-resilience-core/metrics"]
tracing = ["tower-resilience-core/tracing"]
