[package]
name = "tower-resilience-adaptive"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
description = "Adaptive concurrency limiter for Tower services using AIMD and Vegas algorithms"
categories = ["asynchronous", "network-programming", "concurrency"]
keywords = ["tower", "concurrency", "resilience", "middleware", "aimd"]

[dependencies]
tower-resilience-core = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
pin-project-lite = { workspace = true }

# Optional dependencies
tracing = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }

[features]
default = []
# Enable distributed tracing via the tracing crate
tracing = ["dep:tracing"]
# Enable Prometheus metrics (concurrency limit changes, RTT measurements)
metrics = ["dep:metrics"]
