[package]
name = "tower-resilience-cache"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
readme = "../../README.md"
authors = ["Josh Rotenberg <josh@rotenberg.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/tower-resilience"
description = "Response caching/memoization for Tower services"
keywords = ["tower", "cache", "memoization", "resilience"]
categories = ["asynchronous", "network-programming", "caching"]

[dependencies]
tower-resilience-core = { workspace = true }
tower = "0.5"
futures = "0.3"
tokio = { version = "1", features = ["sync", "time"] }
lru = "0.16"
thiserror = "2.0"

# Optional dependencies
metrics = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }

[features]
default = []
metrics = ["dep:metrics", "tower-resilience-core/metrics"]
tracing = ["dep:tracing", "tower-resilience-core/tracing"]
