[package]
name = "tower-resilience-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../../README.md"
authors = ["Josh Rotenberg <josh@rotenberg.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/tower-resilience"
description = "Response caching/memoization for Tower services"
keywords = ["tower", "cache", "memoization", "resilience"]
categories = ["asynchronous", "network-programming", "caching"]

[dependencies]
tower-resilience-core = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
lru = "0.16.2"

# Optional dependencies
metrics = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }

[features]
default = []
# Enable Prometheus metrics (hit/miss rates, cache size, evictions)
metrics = ["dep:metrics", "tower-resilience-core/metrics"]
# Enable distributed tracing via the tracing crate
tracing = ["dep:tracing", "tower-resilience-core/tracing"]
