[package]
name = "tower-resilience-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
description = "Core infrastructure for tower-resilience: events, metrics, and shared utilities"
keywords = ["tower", "resilience", "middleware", "async"]
categories = ["asynchronous", "web-programming"]

[dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

[features]
default = []
# Enable distributed tracing via the tracing crate
tracing = ["dep:tracing"]
# Enable Prometheus metrics support
metrics = ["dep:metrics"]
# Enable HealthTriggerable trait for health-based pattern control
health-integration = []

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
metrics-util = { version = "0.20", default-features = false, features = ["debugging"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "registry"] }
serial_test = "3.2"
