[package]
name = "tower-resilience-fallback"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Fallback middleware for Tower services"
keywords = ["tower", "resilience", "fallback", "fault-tolerance", "middleware"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
# Enable Prometheus metrics (fallback invocations, success/failure counts)
metrics = ["dep:metrics"]
# Enable distributed tracing via the tracing crate
tracing = ["dep:tracing"]

[dependencies]
tower-resilience-core = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
futures = { workspace = true }
metrics = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
