[package]
name = "tower-resilience-healthcheck"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Proactive health checking for resources with intelligent selection strategies"
repository = "https://github.com/joshrotenberg/tower-resilience"
rust-version = "1.75"

[dependencies]
tokio = { version = "1.0", features = ["rt", "time", "sync"] }
rand = { version = "0.9", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
wiremock = "0.6"
tower-resilience-chaos = { path = "../tower-resilience-chaos" }
reqwest = "0.12"
tower = "0.5"
tower-layer = "0.3"

[features]
default = []
random = ["dep:rand"]
tracing = []
full = ["random", "tracing"]
