[package]
name = "tower-resilience-healthcheck"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proactive health checking for resources with intelligent selection strategies"
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["rt", "time", "sync"] }
rand = { version = "0.9", optional = true }
tower-resilience-core = { path = "../tower-resilience-core", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
wiremock = "0.6"
tower-resilience-chaos = { path = "../tower-resilience-chaos" }
reqwest = "0.13"
tower = "0.5"
tower-layer = "0.3"

[features]
default = []
random = ["dep:rand"]
tracing = []
triggers = ["dep:tower-resilience-core", "tower-resilience-core/health-integration"]
full = ["random", "tracing"]
