[package]
name = "tower-resilience-healthcheck"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proactive health checking for resources with intelligent selection strategies"
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1.0", features = ["rt", "time", "sync"] }
rand = { version = "0.9", optional = true }
tower-resilience-core = { version = "0.7.1", path = "../tower-resilience-core", optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
wiremock = "0.6"
tower-resilience-chaos = { version = "0.7.1", path = "../tower-resilience-chaos" }
reqwest = "0.13"
tower = "0.5"
tower-layer = "0.3"

[features]
default = []
# Enable random selection strategy for load balancing across healthy resources
random = ["dep:rand"]
# Enable distributed tracing support (placeholder for future implementation)
tracing = []
# Enable health-triggered control of other patterns (e.g., circuit breakers)
triggers = ["dep:tower-resilience-core", "tower-resilience-core/health-integration"]
# Enable all optional features
full = ["random", "tracing"]
