[package]
name = "tower-resilience-hedge"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Hedging middleware for Tower services - reduces tail latency via parallel requests"
keywords = ["tower", "resilience", "hedge", "latency", "middleware"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
metrics = ["dep:metrics"]
tracing = ["dep:tracing"]

[dependencies]
tower-resilience-core = { version = "0.5.1", path = "../tower-resilience-core" }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt", "macros"] }
pin-project-lite = { workspace = true }
metrics = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
