[package]
name = "tower-resilience-hedge"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Hedging middleware for Tower services - reduces tail latency via parallel requests"
keywords = ["tower", "resilience", "hedge", "latency", "middleware"]
categories = ["asynchronous", "network-programming"]

[features]
default = []
# Enable Prometheus metrics (hedge attempts, winner source, latency)
metrics = ["dep:metrics"]
# Enable distributed tracing via the tracing crate
tracing = ["dep:tracing"]

[dependencies]
tower-resilience-core = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["time", "sync", "rt", "macros"] }
pin-project-lite = { workspace = true }
metrics = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }
