[package]
name = "tower-resilience-outlier"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
description = "Outlier detection pattern for Tower services - fleet-aware instance ejection"
categories = ["network-programming", "rust-patterns"]
keywords = ["tower", "outlier", "resilience", "middleware", "ejection"]

[dependencies]
tower-resilience-core = { workspace = true }
tower = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }

# Optional dependencies
tracing = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread", "time"] }

[features]
default = []
# Enable distributed tracing via the tracing crate
tracing = ["dep:tracing"]
# Enable metrics (ejections, recoveries, etc.)
metrics = ["dep:metrics"]
