[package]
name = "tower-resilience-ratelimiter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
description = "Advanced rate limiting middleware for Tower services"
categories = ["network-programming", "web-programming::http-server"]
keywords = ["tower", "rate-limit", "resilience", "middleware", "throttle"]

[dependencies]
tower-resilience-core = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }

# Optional dependencies
metrics = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
# Enable Prometheus metrics (permits acquired/rejected, wait times)
metrics = ["dep:metrics", "tower-resilience-core/metrics"]
# Enable distributed tracing via the tracing crate
tracing = ["dep:tracing", "tower-resilience-core/tracing"]
