[package]
name = "tower-resilience-retry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
readme = "../../README.md"
description = "Enhanced retry middleware for Tower services with advanced backoff strategies"
categories = ["asynchronous", "network-programming"]
keywords = ["tower", "retry", "resilience", "middleware", "backoff"]

[dependencies]
tower-resilience-core = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
rand = "0.9"

# Optional dependencies
metrics = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = []
metrics = ["dep:metrics", "tower-resilience-core/metrics"]
tracing = ["dep:tracing", "tower-resilience-core/tracing"]
