[package]
name = "tower-resilience-timelimiter"
version = "0.3.3"
edition.workspace = true
rust-version.workspace = true
readme = "../../README.md"
authors = ["Josh Rotenberg <josh@rotenberg.io>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/tower-resilience"
description = "Advanced timeout handling for Tower services"
keywords = ["tower", "timeout", "timelimiter", "resilience"]
categories = ["asynchronous", "network-programming"]

[dependencies]
tower-resilience-core = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["time"] }
thiserror = { workspace = true }

# Optional dependencies
metrics = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }

[features]
default = []
metrics = ["dep:metrics", "tower-resilience-core/metrics"]
tracing = ["dep:tracing", "tower-resilience-core/tracing"]
