[package]
name = "tower-resilience-timelimiter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
readme = "../../README.md"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Advanced timeout handling for Tower services"
keywords = ["tower", "timeout", "timelimiter", "resilience"]
categories = ["asynchronous", "network-programming"]

[dependencies]
tower-resilience-core = { workspace = true }
tower = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["time", "rt", "sync", "macros"] }

# Optional dependencies
metrics = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true, features = ["util"] }
tower-resilience-core = { workspace = true, features = ["testing"] }

[features]
default = []
# Enable Prometheus metrics (timeouts, successful completions, latency)
metrics = ["dep:metrics", "tower-resilience-core/metrics"]
# Enable distributed tracing via the tracing crate
tracing = ["dep:tracing", "tower-resilience-core/tracing"]
